src/styles/globals.css
body,
html {
  padding: 0;
  margin: 0;
}

.text-blue {
  color: #0072f5;
}

.card-grid {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
  grid-gap: 1rem;
}

.comment {
  display: flex;
  align-items: center;
  justify-content: center;
}

.footer-shadow {
  box-shadow: 2px 3px 30px 0px rgba(0, 0, 0, 0.12);
}

/* make .comment responsive for mobile */
@media (max-width: 445px) {
  .comment {
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-start;
  }
}

@media (max-width: 254px) {
  .btn-cont {
    flex-direction: column;
  }
  .avatar-comment {
    display: none;
  }
}

@tailwind base;
@tailwind components;
@tailwind utilities;

